Factor implementation into Logical and Physical IO layers (#27)
Factors implementation into Logical and Physical IO layers.